--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "esm": "^3.2.25"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
     "eslint": "^6.8.0",
     "eslint-plugin-prettier": "^3.1.2",
+    "mocha": "^7.1.1",
     "prettier": "^1.19.1",
     "typescript": "^3.8.3"
   }
