--- a/package.json
+++ b/package.json
@@ -4,20 +4,27 @@
   "description": "yet another hex grid library in typescript",
   "main": "index.js",
   "module": "main.js",
+  "directories": {
+    "test": "test"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "Dave Vogt",
   "license": "ISC",
   "dependencies": {
+    "@types/node": "^13.9.2",
     "esm": "^3.2.25"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.11",
+    "@types/mocha": "^7.0.2",
     "chai": "^4.2.0",
     "eslint": "^6.8.0",
     "eslint-plugin-prettier": "^3.1.2",
     "mocha": "^7.1.1",
     "prettier": "^1.19.1",
+    "ts-node": "^8.8.1",
     "typescript": "^3.8.3"
   }
 }
