--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "type": "module",
   "version": "0.0.1",
   "description": "yet another hex grid library in typescript",
+  "private": true,
   "directories": {
     "test": "test"
   },
@@ -15,15 +16,20 @@
     "esm": "^3.2.25"
   },
   "devDependencies": {
-    "@types/node": "^13.9.3",
+    "@microsoft/tsdoc": "^0.12.19",
     "@types/chai": "^4.2.11",
     "@types/mocha": "^7.0.2",
+    "@types/node": "^13.9.5",
     "chai": "^4.2.0",
     "eslint": "^6.8.0",
     "eslint-plugin-prettier": "^3.1.2",
     "mocha": "^7.1.1",
     "prettier": "^1.19.1",
+    "ts-loader": "^6.2.2",
     "ts-node": "^8.8.1",
-    "typescript": "^3.8.3"
+    "typedoc": "^0.17.3",
+    "typescript": "^3.8.3",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11"
   }
 }
