--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
   },
   "scripts": {
     "test": "mocha -r esm -r ts-node/register test/**/*.ts",
-    "build:docs": "typedoc --out ./docs ./src",
     "lint": "eslint --fix ./src/*",
-    "prebuild": "npm run lint",
-    "build": "npm run build:docs & tsc && eslint --fix ./dist/*.js --no-ignore"
+    "build:docs": "typedoc --out ./docs ./src",
+    "prebuild": "npm run lint & npm run clean",
+    "build": "npm run build:docs & tsc && eslint --fix ./dist/*.js --no-ignore",
+    "clean": "rimraf dist/* & rimraf docs/*"
   },
   "author": "Dave Vogt",
   "license": "ISC",
   "dependencies": {},
   "devDependencies": {
-    "@microsoft/tsdoc": "^0.12.20",
     "@types/chai": "^4.2.12",
     "@types/mocha": "^7.0.2",
     "@types/node": "^13.13.15",
@@ -31,7 +31,7 @@
     "esm": "^3.2.25",
     "mocha": "^7.2.0",
     "prettier": "^1.19.1",
-    "terser": "^5.0.0",
+    "rimraf": "^3.0.2",
     "ts-loader": "^6.2.2",
     "ts-node": "^8.10.2",
     "typedoc": "^0.17.8",
