--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "mocha -r esm -r ts-node/register test/**/*.ts",
+    "test": "mocha -r esm -r ts-node/register -r ts-mocha test/**/*.ts",
     "lint": "eslint --fix ./src/*",
     "build:docs": "typedoc --out ./docs ./src",
     "prebuild": "npm run lint & npm run clean",
@@ -20,10 +20,11 @@
   "dependencies": {},
   "devDependencies": {
     "@types/chai": "^4.2.12",
+    "@types/expect": "^24.3.0",
     "@types/mocha": "^7.0.2",
     "@types/node": "^13.13.15",
-    "@typescript-eslint/eslint-plugin": "^3.7.1",
-    "@typescript-eslint/parser": "^3.7.1",
+    "@typescript-eslint/eslint-plugin": "^3.9.0",
+    "@typescript-eslint/parser": "^3.9.0",
     "chai": "^4.2.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.11.0",
@@ -33,6 +34,7 @@
     "prettier": "^1.19.1",
     "rimraf": "^3.0.2",
     "ts-loader": "^6.2.2",
+    "ts-mocha": "^7.0.0",
     "ts-node": "^8.10.2",
     "typedoc": "^0.17.8",
     "typescript": "^3.9.7"
