--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "lint": "eslint --fix ./src/*",
     "prebuild:docs": "npm run clean:docs",
     "build:docs": "typedoc --out ./docs ./src",
-    "prebuild": "npm run lint & npm run clean:dist",
+    "prebuild": "npm run lint",
     "build": "npm run build:docs & tsc && eslint --fix ./dist/*.js --no-ignore",
     "clean:dist": "rimraf dist/*",
-    "clean:docs": "rimraf docs/*"
+    "clean:docs": "rimraf docs/*",
+    "clean:public": "rimraf public/*",
+    "clean": "npm run clean:dist & npm run clean:docs & npm run clean:public",
+    "predeploy": "npm run build && mkdir -p ./public/js && node tersify.js",
+    "deploy": "cp index.html style.css ./public/"
   },
   "author": "Dave Vogt",
   "license": "ISC",
@@ -24,9 +28,9 @@
     "@types/chai": "^4.2.12",
     "@types/expect": "^24.3.0",
     "@types/mocha": "^7.0.2",
-    "@types/node": "^13.13.15",
-    "@typescript-eslint/eslint-plugin": "^3.9.0",
-    "@typescript-eslint/parser": "^3.9.0",
+    "@types/node": "^14.6.0",
+    "@typescript-eslint/eslint-plugin": "^3.9.1",
+    "@typescript-eslint/parser": "^3.9.1",
     "chai": "^4.2.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.11.0",
@@ -35,6 +39,7 @@
     "mocha": "^7.2.0",
     "prettier": "^1.19.1",
     "rimraf": "^3.0.2",
+    "terser": "^5.2.0",
     "ts-loader": "^6.2.2",
     "ts-mocha": "^7.0.0",
     "ts-node": "^8.10.2",
