keep on changing

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "prebuild:docs": "npm run clean:docs",
     "build:docs": "typedoc --out ./docs ./src",
     "prebuild": "npm run lint",
-    "build": "npm run build:docs & tsc && eslint --fix ./dist/*.js --no-ignore",
+    "build": "npm run build:docs & tsc",
     "clean:dist": "rimraf dist/*",
     "clean:docs": "rimraf docs/*",
     "clean:public": "rimraf public/*",
@@ -39,7 +39,7 @@
     "mocha": "^7.2.0",
     "prettier": "^1.19.1",
     "rimraf": "^3.0.2",
-    "terser": "^5.2.0",
+    "terser": "^5.2.1",
     "ts-loader": "^6.2.2",
     "ts-mocha": "^7.0.0",
     "ts-node": "^8.10.2",
