--- a/package.json
+++ b/package.json
@@ -8,18 +8,19 @@
     "test": "test"
   },
   "scripts": {
-    "test": "mocha -r esm -r ts-node/register -r ts-mocha test/**/*.ts",
+    "test": "mocha -r ts-node/register test/**/*.ts",
     "lint": "eslint --fix ./src/*",
     "prebuild:docs": "npm run clean:docs",
     "build:docs": "typedoc --out ./docs ./src",
-    "prebuild": "npm run lint && mkdir -p ./public/img & mkdir -p ./public/js ",
+    "stagepublic": "mkdir -p ./public/img & mkdir -p ./public/js",
+    "prebuild": "npm run lint",
     "build": "tsc",
-    "clean:dist": "rimraf build/*",
+    "clean:build": "rimraf build/*",
     "clean:docs": "rimraf docs/*",
     "clean:public": "rimraf public/*",
-    "clean": "npm run clean:dist && npm run clean:docs && npm run clean:public",
-    "predeploy": "npm run build && node tersify.js",
-    "deploy": "cp index.html style.css ./public/ && cp ./img/favicon.svg ./public/img/"
+    "clean": "npm run clean:build && npm run clean:docs && npm run clean:public",
+    "predeploy": "npm run build && npm run stagepublic",
+    "deploy": "node tersify.js & cp index.html style.css ./public/ & cp ./img/favicon.svg ./public/img/"
   },
   "author": "Dave Vogt",
   "license": "ISC",
@@ -28,20 +29,19 @@
     "@types/chai": "^4.2.12",
     "@types/expect": "^24.3.0",
     "@types/mocha": "^8.0.3",
-    "@types/node": "^14.6.0",
-    "@typescript-eslint/eslint-plugin": "^3.9.1",
-    "@typescript-eslint/parser": "^3.9.1",
+    "@types/node": "^14.6.1",
+    "@typescript-eslint/eslint-plugin": "^3.10.1",
+    "@typescript-eslint/parser": "^3.10.1",
     "chai": "^4.2.0",
     "eslint": "^7.7.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "esm": "^3.2.25",
-    "mocha": "^8.1.1",
-    "prettier": "^2.0.5",
+    "mocha": "^8.1.2",
+    "prettier": "^2.1.1",
     "rimraf": "^3.0.2",
     "terser": "^5.2.1",
-    "ts-loader": "^8.0.2",
-    "ts-mocha": "^7.0.0",
+    "ts-loader": "^8.0.3",
     "ts-node": "^9.0.0",
     "typedoc": "^0.18.0",
     "typescript": "^4.0.2"
