modified build to run pages

--- a/package.json
+++ b/package.json
@@ -12,15 +12,14 @@
     "lint": "eslint --fix ./src/*",
     "prebuild:docs": "npm run clean:docs",
     "build:docs": "typedoc --out ./docs ./src",
-    "stagepublic": "mkdir -p ./public/img & mkdir -p ./public/js",
     "prebuild": "npm run lint",
     "build": "tsc",
     "clean:build": "rimraf build/*",
     "clean:docs": "rimraf docs/*",
-    "clean:public": "rimraf public/*",
-    "clean": "npm run clean:build && npm run clean:docs && npm run clean:public",
-    "predeploy": "npm run build && npm run stagepublic",
-    "deploy": "node tersify.js & cp index.html style.css ./public/ & cp ./img/favicon.svg ./public/img/"
+    "clean:js": "rimraf js/*",
+    "clean": "npm run clean:docs && npm run clean:js",
+    "predeploy": "npm run build",
+    "deploy": "node tersify.js && npm run clean:build"
   },
   "author": "Dave Vogt",
   "license": "ISC",
