--- a/package.json
+++ b/package.json
@@ -31,22 +31,17 @@
     "xstate": "^4.13.0"
   },
   "devDependencies": {
-    "@types/chai": "^4.2.12",
-    "@types/expect": "^24.3.0",
-    "@types/mocha": "^8.0.3",
-    "@types/node": "^14.11.2",
-    "@typescript-eslint/eslint-plugin": "^4.2.0",
-    "@typescript-eslint/parser": "^4.2.0",
-    "chai": "^4.2.0",
-    "eslint": "^7.10.0",
-    "eslint-config-prettier": "^6.12.0",
+    "@types/node": "^14.11.10",
+    "@typescript-eslint/eslint-plugin": "^4.4.1",
+    "@typescript-eslint/parser": "^4.4.1",
+    "eslint": "^7.11.0",
+    "eslint-config-prettier": "^6.13.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "esm": "^3.2.25",
-    "mocha": "^8.1.3",
     "prettier": "^2.1.2",
     "rimraf": "^3.0.2",
-    "terser": "^5.3.2",
-    "ts-loader": "^8.0.4",
+    "stylelint": "^13.7.2",
+    "stylelint-config-standard": "^20.0.0",
+    "terser": "^5.3.5",
     "ts-node": "^9.0.0",
     "typedoc": "^0.19.2",
     "typescript": "^4.0.3"
