--- a/package.json
+++ b/package.json
@@ -28,27 +28,22 @@
     "url": "git+https://github.com/hiimmrdave/hexgraph.git"
   },
   "dependencies": {
-    "xstate": "^4.13.0"
+    "xstate": "^4.14.0"
   },
   "devDependencies": {
-    "@types/chai": "^4.2.12",
-    "@types/expect": "^24.3.0",
-    "@types/mocha": "^8.0.3",
-    "@types/node": "^14.11.2",
-    "@typescript-eslint/eslint-plugin": "^4.2.0",
-    "@typescript-eslint/parser": "^4.2.0",
-    "chai": "^4.2.0",
-    "eslint": "^7.10.0",
-    "eslint-config-prettier": "^6.12.0",
+    "@types/node": "^14.14.9",
+    "@typescript-eslint/eslint-plugin": "^4.8.1",
+    "@typescript-eslint/parser": "^4.8.1",
+    "eslint": "^7.13.0",
+    "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "esm": "^3.2.25",
-    "mocha": "^8.1.3",
-    "prettier": "^2.1.2",
+    "prettier": "^2.2.0",
     "rimraf": "^3.0.2",
-    "terser": "^5.3.2",
-    "ts-loader": "^8.0.4",
+    "stylelint": "^13.8.0",
+    "stylelint-config-standard": "^20.0.0",
+    "terser": "^5.5.0",
     "ts-node": "^9.0.0",
     "typedoc": "^0.19.2",
-    "typescript": "^4.0.3"
+    "typescript": "^4.1.2"
   }
 }
