--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "eslint --fix ./src/*",
     "prebuild:docs": "npm run clean:docs",
     "build:docs": "typedoc --out ./docs ./src",
+    "build:types": "tsc --declaration --emitDeclarationsOnly --outdir ./types",
     "prebuild": "npm run lint",
     "build": "tsc",
     "clean:build": "rimraf build/*",
@@ -28,22 +29,28 @@
     "url": "git+https://github.com/hiimmrdave/hexgraph.git"
   },
   "dependencies": {
-    "xstate": "^4.14.0"
+    "xstate": "^4.16.2"
   },
   "devDependencies": {
-    "@types/node": "^14.14.9",
-    "@typescript-eslint/eslint-plugin": "^4.8.1",
-    "@typescript-eslint/parser": "^4.8.1",
-    "eslint": "^7.13.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "prettier": "^2.2.0",
+    "@types/chai": "^4.2.15",
+    "@types/mocha": "^8.2.1",
+    "@types/node": "^14.14.31",
+    "@typescript-eslint/eslint-plugin": "^4.15.2",
+    "@typescript-eslint/parser": "^4.15.2",
+    "chai": "^4.3.0",
+    "eslint": "^7.20.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "mocha": "^8.3.0",
+    "mocha-ts": "^0.0.0",
+    "nyc": "^15.1.0",
+    "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
-    "stylelint": "^13.8.0",
+    "stylelint": "^13.11.0",
     "stylelint-config-standard": "^20.0.0",
-    "terser": "^5.5.0",
-    "ts-node": "^9.0.0",
-    "typedoc": "^0.19.2",
-    "typescript": "^4.1.2"
+    "terser": "^5.6.0",
+    "ts-node": "^9.1.1",
+    "typedoc": "^0.20.28",
+    "typescript": "^4.2.2"
   }
 }
