--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "removeComments": true,
     "pretty": true,
     "inlineSourceMap": true,
-    "outDir": "./build/"
+    "outDir": "./build/",
+    "lib": ["esnext","dom"]
   },
   "compileOnSave": true,
   "include":[
