--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,20 +2,15 @@
   "compilerOptions": {
     "strict": true,
     "noImplicitAny": true,
-    "target": "ES2020",
-    "module": "ES2020",
+    "target": "es2021",
+    "module": "ES2022",
     "removeComments": true,
     "pretty": true,
     "inlineSourceMap": true,
     "outDir": "./build/",
-    "lib": ["esnext","dom"]
+    "lib": ["esnext", "dom"]
   },
   "compileOnSave": true,
-  "include":[
-    "src/**/*"
-  ],
-  "exclude":[
-    "node_modules",
-    "test"
-  ]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "test"]
 }
